public/index.css
 
 html, body {
	font-family: Raleway, sans-serif;
	background: grey;
	height: 100%;
}
.sign-in {
	color: #E45641;
}
.sign-up {
	box-shadow: 1;
	color: #44B3C2;
}
.question {
	color: #ffb84d;
}
.navRow {
	background: rgba(255, 255, 255, .9);
}
.navParent {
	
	text-align: center;
	-webkit-box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.75);
	-moz-box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.75);
	box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.75);
	background: rgba(255, 255, 255, 1);
	padding: 10px;
	margin-top: 10px;
	margin-bottom: 10px;
}
.graph {
	border: 1px solid black;
	bottom: 0;
	left: 0;
	width: 100%;
	background: darkgrey
}
.totalList {
	border: 2px solid black;
	background: white;
	width: 100%;
	margin-bottom: 10px;
}
.add {
	margin-bottom: 10px;
	margin-top: 10px;
}
.listedPlanned:hover {
	background: #44B3C2;
}
.listedRecord:hover {
	background: #E45641;
}
.listedPlanned, .listedRecord {
	font-size: 1em;
	cursor: pointer;
}
.selectContainer {
	margin: auto;
}
.formBackground {
	opacity: .7;
	top: 0;
	position: fixed;
	height: 100%;
	width: 100%;
	background-color: gray;
}

label {
	margin: auto;
}
.productive {
	border: 0;
	padding-top: 1px;
	padding-bottom: 1px;
}
.closer {
	float: right;
	top: 0;
	right: 0;
	padding: 0;
	font-size: 15px;
}
.productivityParent {
	border: 2px solid rgb(238, 238, 238);
	display: inline-block;
	text-align: center;
	margin-left: auto;
	margin-right: auto;
	margin-top: 1px;
	background: white;
}
.modalButtons {
	padding: 5px;
}
legend {
	color: white;
	margin: auto;
	padding: 10px;
	font-size: 20px;
	font-weight: bold;
}
label {
	padding-top: 1px;
	padding-bottom: 1px;
}
.recordBG {
	background: #E45641;
}
.plannedBG {
	background: #44B3C2;
}
form {
	padding: 20px;
	text-align: center;
	height: max-content;
	width: fit-content;
	margin: auto;
	position: absolute;
	top: 0;
	left: 0;
	bottom: 0;
	right: 0;
}
.hidden {
	display: none;
}
tr {
	border-top: 2px solid black;
	border-bottom: 2px solid black;
}
.hidden {
	visibility: hidden;
}
input {
	font-size: 20px;
	margin: auto;
	display: block;
}
canvas {
	background: rgba(128, 128, 128, .65);
}
table {
	background: white;
	border: 1px solid black;
	padding: 5px;
	width: 100%;
	margin-left: auto;
	margin-right: auto;
	margin-top: 5px;
}
.total {
	border: 1px solid black;
	text-align: center;
	font-weight: bold;
}
th {
	text-decoration: underline;
	padding: 3px;
}
.res {
	padding: 3px;
}
.red {
	background-color: red;
}
header {
	font-weight: bold;
	font-size: 35px;
}
.parent {
	height: 100%;
	width: 100%;
}
h4 {
	text-align: center;
}

.topNavButtons{
	margin: auto;
}
.sectionTotal {
	font-weight: bold;
	margin: 5px;
}
.mobileNavButtons{
	margin: 5px;
	text-align: center;
}

.display {
	height: fit-content;
	margin-bottom: 15px;
	text-align: center;
	border: 1px solid black;
}
.recorded {
	display: none;
	-webkit-box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.75);
	-moz-box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.75);
	box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.75);
	background: #E45641;
}
.planned {
	display: none;
	
	
	-webkit-box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.75);
	-moz-box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.75);
	box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.75);
	background: rgba(68, 179, 194, .89)
}
.totals {
	
	-webkit-box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.75);
	-moz-box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.75);
	box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.75);
	font-size: 1em;
	font-weight: bold;
	background: rgba(255, 184, 77, .89);
}

.helpText {
	height: 75%;
	overflow: scroll;
	font-size: 20px;
	padding: 10px;
	z-index: 1;
width: 100%;
	background: white;
	margin: auto;
	position: absolute;
	top: 0;
	left: 0;
	bottom: 0;
	right: 0;
}

.recordedTotal {
	background: rgba(228, 86, 65, 0.89);
}
.unspentTotal {
	background: #ffb84d;
}
.plannedTotal {
	background: #44B3C2
}


.mobileRecords, .mobileToDos, .mobileBudget{

	color: white;
	font-weight: bold;
	padding: 3px;
	border: 0;
}
.mobileRecords:hover, .mobileToDos:hover, .mobileBudget:hover{
	padding: 10px;
}

.mobileRecords:active, .mobileToDos:active, .mobileBudget:active{
	padding: 10px;
	
   }



.mobileBudget{
	background: #ffb84d;
}
.mobileToDos{
	background: #44B3C2;
}
.mobileRecords{
	background: #E45641
}
/* DESKTOP */
@media only screen and (min-width: 880px) {
	.helpText{
		width: 50%;
		height: 75%;
	}
.mobileNavButtons{
	display: none;
}

.recorded, .planned, .totals{
	display: inline-block
}
.display{
	height: 100%;
	margin-bottom: 15px;
	margin-top: 100px;
	width: 33%;
	padding: 10px;
}
.recorded{
	margin-right: 2px;
}
.planned{
	margin-left: 2px;
}

header, .topNavButtons, .topNavDateTime {
    width: 33%;
    text-align: center;
    display: inline-block;
}
.navParent{z-index: 1;
position: fixed;
width: 100%;}
}
/* tablets */
@media only screen and (min-height: 1000px) {
	.display{
		height: 75%;
	}

}

